WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
232665
::slotted element style not invalidated correctly in nested case
https://bugs.webkit.org/show_bug.cgi?id=232665
Summary
::slotted element style not invalidated correctly in nested case
Antti Koivisto
Reported
2021-11-03 06:02:34 PDT
If an element is slotted through multiple slots its style may not get invalidated correctly.
Attachments
Patch
(5.20 KB, patch)
2021-11-03 06:51 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.21 KB, patch)
2021-11-03 09:25 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2021-11-03 06:51:07 PDT
Created
attachment 443196
[details]
Patch
Simon Fraser (smfr)
Comment 2
2021-11-03 09:07:22 PDT
Comment on
attachment 443196
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=443196&action=review
> Source/WebCore/ChangeLog:8 > + We fail to invalidae ::slotted style if the assinged node is not from the current host scope.
assinged
> Source/WebCore/ChangeLog:13 > + Invalidate by following assinged node chain recursively instead of just dumbly invalidating all host children.
assinged. Please use a more inclusive term than "dumbly"
Antti Koivisto
Comment 3
2021-11-03 09:25:35 PDT
Created
attachment 443203
[details]
Patch for landing
EWS
Comment 4
2021-11-03 09:59:56 PDT
Committed
r285211
(
243837@main
): <
https://commits.webkit.org/243837@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 443203
[details]
.
Radar WebKit Bug Importer
Comment 5
2021-11-03 10:00:24 PDT
<
rdar://problem/84979096
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug