::slotted element style not invalidated correctly in nested case https://bugs.webkit.org/show_bug.cgi?id=232665

Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-scoping/slotted-nested-expected.txt:

Source/WebCore:

We fail to invalidate ::slotted style if the assigned node is not from the current host scope.

* style/StyleInvalidator.cpp:
(WebCore::Style::invalidateAssignedElements):

Invalidate more accurately by following assigned node chain recursively instead of just invalidating all host children.

(WebCore::Style::Invalidator::invalidateIfNeeded):

Remove the unnecessary and incorrect m_didInvalidateHostChildren optimization.

* style/StyleInvalidator.h:



Canonical link: https://commits.webkit.org/243837@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285211 268f45cc-cd09-0410-ab3c-d52691b4dbfc