Source/WebCore/style/StyleInvalidator.h
@@ -90,7 +90,6 @@ private:
     RuleInformation m_ruleInformation;
 
     bool m_dirtiesAllStyle { false };
-    bool m_didInvalidateHostChildren { false };
 };
 
 }
